--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
